# kmp-ttrpg-companion

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.go  Dockerfile.rust  README.md  build.gradle  build.gradle.kts  fly.toml  gradle.properties  settings.gradle.kts
.claude/: CLAUDE.md  settings.json
.github/: dependabot.yaml  pull_request_template.md
app/: build.gradle  build.gradle.kts
bruno/: bruno.json
buildSrc/: build.gradle.kts
cmp-ttrpg-companion/: .editorconfig  .gitignore  README.md  build.gradle.kts  compose_stability.conf  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts  ttrpg_companion.db
data/: srd-magical-item-ingestion.md  srd-monster-ingestion.md  srd-spell-ingestion.md
docs/: ROADMAP.md  roadmap.md
docs/rules/: 5e-srd.md  (+1 more)
gradle/: libs.versions.toml
libs/: core.2021.09.14.aar  core.2021.09.15.aar  logger.2021.09.14.aar  logger.2024-11-23.aar  logger.logcat.2021.09.14.aar  notifier.2021.09.14.aar  templates.2021.09.14.aar  tracker.2021.09.14.aar  tracker.2024-11-23.aar
model/: build.gradle.kts
models/: build.gradle.kts
scripts/: build_compendium.py  fetch_enspelled.py  fetch_missing_descriptions.py  migrate_json_to_yaml.py
server-go/: go.mod  railway.toml
server-rust/: Cargo.toml  railway.toml
server-rust/src/: app_state.rs  main.rs
server-rust/src/models/: creature.rs  magical_item.rs  mod.rs  monster.rs  spell.rs
server-rust/src/routes/: creature.rs  magical_item.rs  mod.rs  spell.rs
server-rust/src/store/: json_store.rs  mod.rs
spring-server/: build.gradle.kts  docker-compose.yml
(+2383 files in other folders)
