[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server-rust"
path = "src/main.rs"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
